external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_keyword_field.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_keyword_field.move:4:23
  │
4 │     public struct Foo(fun)
  │                       ^^^
  │                       │
  │                       Unexpected 'fun'
  │                       Expected a type name

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_keyword_field.move:4:26
  │
4 │     public struct Foo(fun)
  │                          ^
  │                          │
  │                          Unexpected ')'
  │                          Expected an identifier

